[package]
name = "Examples"
version = "0.1.0"
authors = ["aitor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssd1306 = "0.4.0"
embedded-graphics = "0.6.0"
cortex-m = "0.6.2"
display-interface-spi = "0.4.0"
rppal = { version = "0.11.3", features = ["hal"] }

